codeGeneraion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    ERROR
    FLOAT
    FLOATNUMBER
    RETURN
    THEN
    VOID

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> declist dec
Rule 3     declist -> <empty>
Rule 4     dec -> vardec
Rule 5     type -> INTEGER
Rule 6     iddec -> ID
Rule 7     iddec -> ID LSB exp RSB
Rule 8     iddec -> ID ASSIGN exp
Rule 9     idlist -> iddec COMMA idlist
Rule 10    idlist -> iddec
Rule 11    vardec -> type idlist SEMICOLON
Rule 12    varlist -> varlist vardec
Rule 13    varlist -> <empty>
Rule 14    block -> LCB varlist stmtlist RCB
Rule 15    stmtlist -> stmt stmtlist
Rule 16    stmtlist -> <empty>
Rule 17    stmt -> block
Rule 18    lvalue -> ID
Rule 19    lvalue -> ID LSB exp RSB
Rule 20    stmt -> exp SEMICOLON
Rule 21    m -> <empty>
Rule 22    n -> <empty>
Rule 23    stmt -> WHILE LRB exp RRB m stmt
Rule 24    stmt -> FOR LRB exp SEMICOLON m exp SEMICOLON exp RRB m stmt
Rule 25    stmt -> ifnoelse n elseiflist ifwithelse
Rule 26    ifnoelse -> IF LRB exp RRB m stmt
Rule 27    ifwithelse -> ELSE m stmt
Rule 28    ifwithelse -> <empty>
Rule 29    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 30    elseiflist -> ELIF LRB exp RRB m stmt n elseiflist
Rule 31    elseiflist -> <empty>
Rule 32    exp -> lvalue ASSIGN exp
Rule 33    exp -> exp SUM exp
Rule 34    exp -> exp SUB exp
Rule 35    exp -> exp MUL exp
Rule 36    exp -> exp DIV exp
Rule 37    exp -> exp REMAINDER exp
Rule 38    exp -> exp OR m exp
Rule 39    exp -> exp AND m exp
Rule 40    exp -> exp relop exp
Rule 41    exp -> const
Rule 42    exp -> lvalue
Rule 43    exp -> LRB exp RRB
Rule 44    exp -> SUB exp
Rule 45    exp -> NOT exp
Rule 46    const -> INTEGERNUMBER
Rule 47    const -> FALSE
Rule 48    const -> TRUE
Rule 49    relop -> GT
Rule 50    relop -> LT
Rule 51    relop -> NE
Rule 52    relop -> EQ
Rule 53    relop -> LE
Rule 54    relop -> GE

Terminals, with rules where they appear

AND                  : 39
ASSIGN               : 8 32
BOOLEAN              : 
COMMA                : 9
DIV                  : 36
ELIF                 : 30
ELSE                 : 27
EQ                   : 52
ERROR                : 
FALSE                : 47
FLOAT                : 
FLOATNUMBER          : 
FOR                  : 24
GE                   : 54
GT                   : 49
ID                   : 6 7 8 18 19 29
IF                   : 26
INTEGER              : 5
INTEGERNUMBER        : 46
LCB                  : 14
LE                   : 53
LRB                  : 1 23 24 26 29 30 43
LSB                  : 7 19
LT                   : 50
MAIN                 : 1
MUL                  : 35
NE                   : 51
NOT                  : 45
OR                   : 38
PRINT                : 29
RCB                  : 14
REMAINDER            : 37
RETURN               : 
RRB                  : 1 23 24 26 29 30 43
RSB                  : 7 19
SEMICOLON            : 11 20 24 24 29
SUB                  : 34 44
SUM                  : 33
THEN                 : 
TRUE                 : 48
VOID                 : 
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

block                : 1 17
const                : 41
dec                  : 2
declist              : 1 2
elseiflist           : 25 30
exp                  : 7 8 19 20 23 24 24 24 26 30 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 43 44 45
iddec                : 9 10
idlist               : 9 11
ifnoelse             : 25
ifwithelse           : 25
lvalue               : 32 42
m                    : 23 24 24 26 27 30 38 39
n                    : 25 30
program              : 0
relop                : 40
stmt                 : 15 23 24 26 27 30
stmtlist             : 14 15
type                 : 11
vardec               : 4 12
varlist              : 12 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . declist dec
    (3) declist -> .

    MAIN            reduce using rule 3 (declist -> .)
    INTEGER         reduce using rule 3 (declist -> .)

    program                        shift and go to state 1
    declist                        shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (2) declist -> declist . dec
    (4) dec -> . vardec
    (11) vardec -> . type idlist SEMICOLON
    (5) type -> . INTEGER

    MAIN            shift and go to state 3
    INTEGER         shift and go to state 7

    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    type                           shift and go to state 6

state 3

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 8


state 4

    (2) declist -> declist dec .

    MAIN            reduce using rule 2 (declist -> declist dec .)
    INTEGER         reduce using rule 2 (declist -> declist dec .)


state 5

    (4) dec -> vardec .

    MAIN            reduce using rule 4 (dec -> vardec .)
    INTEGER         reduce using rule 4 (dec -> vardec .)


state 6

    (11) vardec -> type . idlist SEMICOLON
    (9) idlist -> . iddec COMMA idlist
    (10) idlist -> . iddec
    (6) iddec -> . ID
    (7) iddec -> . ID LSB exp RSB
    (8) iddec -> . ID ASSIGN exp

    ID              shift and go to state 11

    idlist                         shift and go to state 9
    iddec                          shift and go to state 10

state 7

    (5) type -> INTEGER .

    ID              reduce using rule 5 (type -> INTEGER .)


state 8

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 12


state 9

    (11) vardec -> type idlist . SEMICOLON

    SEMICOLON       shift and go to state 13


state 10

    (9) idlist -> iddec . COMMA idlist
    (10) idlist -> iddec .

    COMMA           shift and go to state 14
    SEMICOLON       reduce using rule 10 (idlist -> iddec .)


state 11

    (6) iddec -> ID .
    (7) iddec -> ID . LSB exp RSB
    (8) iddec -> ID . ASSIGN exp

    COMMA           reduce using rule 6 (iddec -> ID .)
    SEMICOLON       reduce using rule 6 (iddec -> ID .)
    LSB             shift and go to state 15
    ASSIGN          shift and go to state 16


state 12

    (1) program -> declist MAIN LRB RRB . block
    (14) block -> . LCB varlist stmtlist RCB

    LCB             shift and go to state 18

    block                          shift and go to state 17

state 13

    (11) vardec -> type idlist SEMICOLON .

    MAIN            reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    INTEGER         reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    WHILE           reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    FOR             reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    PRINT           reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    LCB             reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    LRB             reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    SUB             reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    NOT             reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    IF              reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    ID              reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    INTEGERNUMBER   reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    FALSE           reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    TRUE            reduce using rule 11 (vardec -> type idlist SEMICOLON .)
    RCB             reduce using rule 11 (vardec -> type idlist SEMICOLON .)


state 14

    (9) idlist -> iddec COMMA . idlist
    (9) idlist -> . iddec COMMA idlist
    (10) idlist -> . iddec
    (6) iddec -> . ID
    (7) iddec -> . ID LSB exp RSB
    (8) iddec -> . ID ASSIGN exp

    ID              shift and go to state 11

    iddec                          shift and go to state 10
    idlist                         shift and go to state 19

state 15

    (7) iddec -> ID LSB . exp RSB
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 21
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 16

    (8) iddec -> ID ASSIGN . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 30
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 17

    (1) program -> declist MAIN LRB RRB block .

    $end            reduce using rule 1 (program -> declist MAIN LRB RRB block .)


state 18

    (14) block -> LCB . varlist stmtlist RCB
    (12) varlist -> . varlist vardec
    (13) varlist -> .

    WHILE           reduce using rule 13 (varlist -> .)
    FOR             reduce using rule 13 (varlist -> .)
    PRINT           reduce using rule 13 (varlist -> .)
    INTEGER         reduce using rule 13 (varlist -> .)
    LCB             reduce using rule 13 (varlist -> .)
    LRB             reduce using rule 13 (varlist -> .)
    SUB             reduce using rule 13 (varlist -> .)
    NOT             reduce using rule 13 (varlist -> .)
    IF              reduce using rule 13 (varlist -> .)
    ID              reduce using rule 13 (varlist -> .)
    INTEGERNUMBER   reduce using rule 13 (varlist -> .)
    FALSE           reduce using rule 13 (varlist -> .)
    TRUE            reduce using rule 13 (varlist -> .)
    RCB             reduce using rule 13 (varlist -> .)

    varlist                        shift and go to state 31

state 19

    (9) idlist -> iddec COMMA idlist .

    SEMICOLON       reduce using rule 9 (idlist -> iddec COMMA idlist .)


state 20

    (18) lvalue -> ID .
    (19) lvalue -> ID . LSB exp RSB

    ASSIGN          reduce using rule 18 (lvalue -> ID .)
    RSB             reduce using rule 18 (lvalue -> ID .)
    SUM             reduce using rule 18 (lvalue -> ID .)
    SUB             reduce using rule 18 (lvalue -> ID .)
    MUL             reduce using rule 18 (lvalue -> ID .)
    DIV             reduce using rule 18 (lvalue -> ID .)
    REMAINDER       reduce using rule 18 (lvalue -> ID .)
    OR              reduce using rule 18 (lvalue -> ID .)
    AND             reduce using rule 18 (lvalue -> ID .)
    GT              reduce using rule 18 (lvalue -> ID .)
    LT              reduce using rule 18 (lvalue -> ID .)
    NE              reduce using rule 18 (lvalue -> ID .)
    EQ              reduce using rule 18 (lvalue -> ID .)
    LE              reduce using rule 18 (lvalue -> ID .)
    GE              reduce using rule 18 (lvalue -> ID .)
    COMMA           reduce using rule 18 (lvalue -> ID .)
    SEMICOLON       reduce using rule 18 (lvalue -> ID .)
    RRB             reduce using rule 18 (lvalue -> ID .)
    LSB             shift and go to state 32


state 21

    (7) iddec -> ID LSB exp . RSB
    (33) exp -> exp . SUM exp
    (34) exp -> exp . SUB exp
    (35) exp -> exp . MUL exp
    (36) exp -> exp . DIV exp
    (37) exp -> exp . REMAINDER exp
    (38) exp -> exp . OR m exp
    (39) exp -> exp . AND m exp
    (40) exp -> exp . relop exp
    (49) relop -> . GT
    (50) relop -> . LT
    (51) relop -> . NE
    (52) relop -> . EQ
    (53) relop -> . LE
    (54) relop -> . GE

    RSB             shift and go to state 33
    SUM             shift and go to state 34
    SUB             shift and go to state 35
    MUL             shift and go to state 36
    DIV             shift and go to state 37
    REMAINDER       shift and go to state 38
    OR              shift and go to state 39
    AND             shift and go to state 40
    GT              shift and go to state 42
    LT              shift and go to state 43
    NE              shift and go to state 44
    EQ              shift and go to state 45
    LE              shift and go to state 46
    GE              shift and go to state 47

    relop                          shift and go to state 41

state 22

    (32) exp -> lvalue . ASSIGN exp
    (42) exp -> lvalue .

    ASSIGN          shift and go to state 48
    RSB             reduce using rule 42 (exp -> lvalue .)
    SUM             reduce using rule 42 (exp -> lvalue .)
    SUB             reduce using rule 42 (exp -> lvalue .)
    MUL             reduce using rule 42 (exp -> lvalue .)
    DIV             reduce using rule 42 (exp -> lvalue .)
    REMAINDER       reduce using rule 42 (exp -> lvalue .)
    OR              reduce using rule 42 (exp -> lvalue .)
    AND             reduce using rule 42 (exp -> lvalue .)
    GT              reduce using rule 42 (exp -> lvalue .)
    LT              reduce using rule 42 (exp -> lvalue .)
    NE              reduce using rule 42 (exp -> lvalue .)
    EQ              reduce using rule 42 (exp -> lvalue .)
    LE              reduce using rule 42 (exp -> lvalue .)
    GE              reduce using rule 42 (exp -> lvalue .)
    COMMA           reduce using rule 42 (exp -> lvalue .)
    SEMICOLON       reduce using rule 42 (exp -> lvalue .)
    RRB             reduce using rule 42 (exp -> lvalue .)


state 23

    (44) exp -> SUB . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 49
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 24

    (41) exp -> const .

    RSB             reduce using rule 41 (exp -> const .)
    SUM             reduce using rule 41 (exp -> const .)
    SUB             reduce using rule 41 (exp -> const .)
    MUL             reduce using rule 41 (exp -> const .)
    DIV             reduce using rule 41 (exp -> const .)
    REMAINDER       reduce using rule 41 (exp -> const .)
    OR              reduce using rule 41 (exp -> const .)
    AND             reduce using rule 41 (exp -> const .)
    GT              reduce using rule 41 (exp -> const .)
    LT              reduce using rule 41 (exp -> const .)
    NE              reduce using rule 41 (exp -> const .)
    EQ              reduce using rule 41 (exp -> const .)
    LE              reduce using rule 41 (exp -> const .)
    GE              reduce using rule 41 (exp -> const .)
    COMMA           reduce using rule 41 (exp -> const .)
    SEMICOLON       reduce using rule 41 (exp -> const .)
    RRB             reduce using rule 41 (exp -> const .)


state 25

    (43) exp -> LRB . exp RRB
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 50
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 26

    (45) exp -> NOT . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 51
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 27

    (46) const -> INTEGERNUMBER .

    RSB             reduce using rule 46 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 46 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 46 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 46 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 46 (const -> INTEGERNUMBER .)
    REMAINDER       reduce using rule 46 (const -> INTEGERNUMBER .)
    OR              reduce using rule 46 (const -> INTEGERNUMBER .)
    AND             reduce using rule 46 (const -> INTEGERNUMBER .)
    GT              reduce using rule 46 (const -> INTEGERNUMBER .)
    LT              reduce using rule 46 (const -> INTEGERNUMBER .)
    NE              reduce using rule 46 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 46 (const -> INTEGERNUMBER .)
    LE              reduce using rule 46 (const -> INTEGERNUMBER .)
    GE              reduce using rule 46 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 46 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 46 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 46 (const -> INTEGERNUMBER .)


state 28

    (47) const -> FALSE .

    RSB             reduce using rule 47 (const -> FALSE .)
    SUM             reduce using rule 47 (const -> FALSE .)
    SUB             reduce using rule 47 (const -> FALSE .)
    MUL             reduce using rule 47 (const -> FALSE .)
    DIV             reduce using rule 47 (const -> FALSE .)
    REMAINDER       reduce using rule 47 (const -> FALSE .)
    OR              reduce using rule 47 (const -> FALSE .)
    AND             reduce using rule 47 (const -> FALSE .)
    GT              reduce using rule 47 (const -> FALSE .)
    LT              reduce using rule 47 (const -> FALSE .)
    NE              reduce using rule 47 (const -> FALSE .)
    EQ              reduce using rule 47 (const -> FALSE .)
    LE              reduce using rule 47 (const -> FALSE .)
    GE              reduce using rule 47 (const -> FALSE .)
    COMMA           reduce using rule 47 (const -> FALSE .)
    SEMICOLON       reduce using rule 47 (const -> FALSE .)
    RRB             reduce using rule 47 (const -> FALSE .)


state 29

    (48) const -> TRUE .

    RSB             reduce using rule 48 (const -> TRUE .)
    SUM             reduce using rule 48 (const -> TRUE .)
    SUB             reduce using rule 48 (const -> TRUE .)
    MUL             reduce using rule 48 (const -> TRUE .)
    DIV             reduce using rule 48 (const -> TRUE .)
    REMAINDER       reduce using rule 48 (const -> TRUE .)
    OR              reduce using rule 48 (const -> TRUE .)
    AND             reduce using rule 48 (const -> TRUE .)
    GT              reduce using rule 48 (const -> TRUE .)
    LT              reduce using rule 48 (const -> TRUE .)
    NE              reduce using rule 48 (const -> TRUE .)
    EQ              reduce using rule 48 (const -> TRUE .)
    LE              reduce using rule 48 (const -> TRUE .)
    GE              reduce using rule 48 (const -> TRUE .)
    COMMA           reduce using rule 48 (const -> TRUE .)
    SEMICOLON       reduce using rule 48 (const -> TRUE .)
    RRB             reduce using rule 48 (const -> TRUE .)


state 30

    (8) iddec -> ID ASSIGN exp .
    (33) exp -> exp . SUM exp
    (34) exp -> exp . SUB exp
    (35) exp -> exp . MUL exp
    (36) exp -> exp . DIV exp
    (37) exp -> exp . REMAINDER exp
    (38) exp -> exp . OR m exp
    (39) exp -> exp . AND m exp
    (40) exp -> exp . relop exp
    (49) relop -> . GT
    (50) relop -> . LT
    (51) relop -> . NE
    (52) relop -> . EQ
    (53) relop -> . LE
    (54) relop -> . GE

    COMMA           reduce using rule 8 (iddec -> ID ASSIGN exp .)
    SEMICOLON       reduce using rule 8 (iddec -> ID ASSIGN exp .)
    SUM             shift and go to state 34
    SUB             shift and go to state 35
    MUL             shift and go to state 36
    DIV             shift and go to state 37
    REMAINDER       shift and go to state 38
    OR              shift and go to state 39
    AND             shift and go to state 40
    GT              shift and go to state 42
    LT              shift and go to state 43
    NE              shift and go to state 44
    EQ              shift and go to state 45
    LE              shift and go to state 46
    GE              shift and go to state 47

    relop                          shift and go to state 41

state 31

    (14) block -> LCB varlist . stmtlist RCB
    (12) varlist -> varlist . vardec
    (15) stmtlist -> . stmt stmtlist
    (16) stmtlist -> .
    (11) vardec -> . type idlist SEMICOLON
    (17) stmt -> . block
    (20) stmt -> . exp SEMICOLON
    (23) stmt -> . WHILE LRB exp RRB m stmt
    (24) stmt -> . FOR LRB exp SEMICOLON m exp SEMICOLON exp RRB m stmt
    (25) stmt -> . ifnoelse n elseiflist ifwithelse
    (29) stmt -> . PRINT LRB ID RRB SEMICOLON
    (5) type -> . INTEGER
    (14) block -> . LCB varlist stmtlist RCB
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (26) ifnoelse -> . IF LRB exp RRB m stmt
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    RCB             reduce using rule 16 (stmtlist -> .)
    WHILE           shift and go to state 57
    FOR             shift and go to state 58
    PRINT           shift and go to state 60
    INTEGER         shift and go to state 7
    LCB             shift and go to state 18
    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    IF              shift and go to state 61
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    stmtlist                       shift and go to state 52
    vardec                         shift and go to state 53
    stmt                           shift and go to state 54
    type                           shift and go to state 6
    block                          shift and go to state 55
    exp                            shift and go to state 56
    ifnoelse                       shift and go to state 59
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 32

    (19) lvalue -> ID LSB . exp RSB
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 62
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 33

    (7) iddec -> ID LSB exp RSB .

    COMMA           reduce using rule 7 (iddec -> ID LSB exp RSB .)
    SEMICOLON       reduce using rule 7 (iddec -> ID LSB exp RSB .)


state 34

    (33) exp -> exp SUM . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 63
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 35

    (34) exp -> exp SUB . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 64
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 36

    (35) exp -> exp MUL . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 65
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 37

    (36) exp -> exp DIV . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 66
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 38

    (37) exp -> exp REMAINDER . exp
    (32) exp -> . lvalue ASSIGN exp
    (33) exp -> . exp SUM exp
    (34) exp -> . exp SUB exp
    (35) exp -> . exp MUL exp
    (36) exp -> . exp DIV exp
    (37) exp -> . exp REMAINDER exp
    (38) exp -> . exp OR m exp
    (39) exp -> . exp AND m exp
    (40) exp -> . exp relop exp
    (41) exp -> . const
    (42) exp -> . lvalue
    (43) exp -> . LRB exp RRB
    (44) exp -> . SUB exp
    (45) exp -> . NOT exp
    (18) lvalue -> . ID
    (19) lvalue -> . ID LSB exp RSB
    (46) const -> . INTEGERNUMBER
    (47) const -> . FALSE
    (48) const -> . TRUE

    LRB             shift and go to state 25
    SUB             shift and go to state 23
    NOT             shift and go to state 26
    ID              shift and go to state 20
    INTEGERNUMBER   shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29

    exp                            shift and go to state 67
    lvalue                         shift and go to state 22
    const                          shift and go to state 24

state 39

    (38) exp -> exp OR . m exp
    (21) m -> .

    LRB             reduce using rule 21 (m -> .)
    SUB             reduce using rule 21 (m -> .)
    NOT             reduce using rule 21 (m -> .)
    ID              reduce using rule 21 (m -> .)
    INTEGERNUMBER   reduce using rule 21 (m -> .)
    FALSE           reduce using rule 21 (m -> .)
